--- a/frontend/src/components/layout/Navbar.css
+++ b/frontend/src/components/layout/Navbar.css
@@ -37,7 +37,7 @@ li {
   height: 6rem;
   /* background-color: #3b5998; */
   grid-column: 2/3;
-  justify-content: start;
+  justify-content: flex-start;
   align-items: center;
 }
 
@@ -198,7 +198,7 @@ li {
     display: flex;
     justify-content: space-around;
     flex-direction: column;
-    align-items: start;
+    align-items: flex-start;
   }
 
   .mobile-menu-link ul li:first-child {
