--- a/frontend/src/components/layout/Navbar.css
+++ b/frontend/src/components/layout/Navbar.css
@@ -112,11 +112,11 @@ li {
 }
 
 .searchIcon {
-  color: rgb(79, 79, 236);
+  color: red;
 }
 
 .cartIcon {
-  color: rgb(79, 79, 236);
+  color: red;
 }
 
 .userIcon {
