--- a/frontend/src/components/Product/ProductDetails.css
+++ b/frontend/src/components/Product/ProductDetails.css
@@ -244,7 +244,7 @@
   .detailsBlock-3-1-1 > input {
     padding: 1.5vmax;
     width: 3vmax;
-    font: 400 1.8vmax;
+    font: 400 1.8vmax "Roboto";
   }
 
   .detailsBlock-3-1 > button:last-child {
